--- a/FirstProject.html
+++ b/FirstProject.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Website</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <h3>Welcome to website</h3>
+    <div><h3>Welcome to my website</h3></div>
+    <div class="block">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nobis voluptates qui? Sed vero, molestias fuga accusamus praesentium deserunt dolorum reiciendis nihil impedit, officiis nobis voluptate. Asperiores dolore rem cumque!</p>
+    </div>
+    <div class="block">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nobis voluptates qui? Sed vero, molestias fuga accusamus praesentium deserunt dolorum reiciendis nihil impedit, officiis nobis voluptate. Asperiores dolore rem cumque!</p>
+    </div>
+    <div class="block">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nobis voluptates qui? Sed vero, molestias fuga accusamus praesentium deserunt dolorum reiciendis nihil impedit, officiis nobis voluptate. Asperiores dolore rem cumque!</p>
+    </div>
+
 </body>
 </html>
